@@ -65,7 +65,7 @@ class formAjaxServerCallFunctions extends ezjscServerFunctions
         $tpl->setVariable( 'validator_email_id', formValidators::EMAIL_ID );
         $tpl->setVariable( 'validator_custom_regex_id', formValidators::CUSTOM_REGEX );
         
-        return $tpl->fetch( 'design:forms/types/' . $type->attribute( 'template' ) );
+        return $tpl->fetch( 'design:formmaker/types/' . $type->attribute( 'template' ) );
     }
     
     /**
@@ -86,7 +86,7 @@ class formAjaxServerCallFunctions extends ezjscServerFunctions
         $tpl->setVariable( 'label', '' );
         $tpl->setVariable( 'option_id', uniqid() );
         
-        return $tpl->fetch( 'design:forms/types/elements/option_line.tpl' );
+        return $tpl->fetch( 'design:formmaker/types/elements/option_line.tpl' );
     }
     
     /**
@@ -111,12 +111,12 @@ class formAjaxServerCallFunctions extends ezjscServerFunctions
         {
             case formValidators::EMAIL_ID:
                 $tpl->setVariable( 'enabled', $http->postVariable( 'value' ) );
-                $rendered_template = $tpl->fetch( 'design:forms/types/elements/email_receiver.tpl' );
+                $rendered_template = $tpl->fetch( 'design:formmaker/types/elements/email_receiver.tpl' );
                 break;
             
             case formValidators::CUSTOM_REGEX:
                 $tpl->setVariable( 'regex', $http->postVariable( 'value' ) );
-                $rendered_template = $tpl->fetch( 'design:forms/types/elements/custom_regex.tpl' );
+                $rendered_template = $tpl->fetch( 'design:formmaker/types/elements/custom_regex.tpl' );
                 break;
         }
         
