@@ -5,8 +5,8 @@
 
 <div class="formField form-{$input.id}">
     <input type="hidden" name="formelement_{$input_id}[type]" value="{$input.id}"/>
-    {include uri="design:forms/types/elements/field_header.tpl" input_name=$input.name input_id=$input_id enabled=$data.enabled}
+    {include uri="design:formmaker/types/elements/field_header.tpl" input_name=$input.name input_id=$input_id enabled=$data.enabled}
     <div class="form-field-attributes-container">
-        {include uri="design:forms/types/elements/label.tpl" label=$data.label input_id=$input_id}
+        {include uri="design:formmaker/types/elements/label.tpl" label=$data.label input_id=$input_id}
     </div>
 </div>
